--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-navigations": "^26.2.12",
+    "@syncfusion/ej2-vue-notifications": "^26.2.10",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "swiper": "^11.1.12",
+    "vue": "^3.2.13",
+    "vue-carousel": "^0.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
