--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "core-js": "^3.8.3",
     "swiper": "^11.1.12",
     "vue": "^3.2.13",
-    "vue-carousel": "^0.18.0"
+    "vue-carousel": "^0.18.0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
